--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,6 +28,32 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: sans-serif;
   min-height: 100vh;
+}
+
+.background {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  filter: opacity(0.6);
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  z-index: -1;
+}
+
+.button_link {
+  padding: 5px;
+  background: var(--button-gradient);
+  font-size: 17px;
+  border-radius: 8px;
+  font-weight: bold;
+  border: transparent 1px solid;
+  transition: all 0.2s ease-in-out;
+}
+
+.button_link:hover {
+  border: wheat 1px solid;
 }
