--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,8 @@
   --activeButton: rgba(16, 165, 153, 0.48);
   --outline-pink: pink 1px solid;
   --button-gradient: linear-gradient(45deg, #ef6d5b, #ff448b);
-  --button-gradient-hover: linear-gradient(45deg, #f16652, #dc3a78);
+  --button-gradient-hover: linear-gradient(45deg, #2aad5acf, #20adada6);
+  --border: wheat 1px solid
 }
 
 *{
@@ -30,6 +31,16 @@ body {
   background: var(--background);
   font-family: sans-serif;
   min-height: 100vh;
+}
+
+header {
+  position: sticky;
+  top: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border-radius: 0 0 8px 8px;
+  z-index: 2;
 }
 
 .background {
@@ -56,4 +67,21 @@ body {
 
 .button_link:hover {
   border: wheat 1px solid;
+}
+
+.main_layout {
+  max-width: 1100px;
+  margin: 50px auto;
+}
+
+.main_page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 32px;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.4);
+  border-radius: 8px;
+  padding: 20px;
+  margin: 0 10px;
 }
