--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -10,6 +6,8 @@
   --outline-pink: pink 1px solid;
   --button-gradient: linear-gradient(45deg, #ef6d5b, #ff448b);
   --button-gradient-hover: linear-gradient(45deg, #2aad5acf, #20adada6);
+  --background-black: rgba(0, 0, 0, 0.6);
+  --background-blacker: rgba(0, 0, 0, 0.65);
   --border: wheat 1px solid
 }
 
@@ -31,6 +29,19 @@ body {
   background: var(--background);
   font-family: sans-serif;
   min-height: 100vh;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 8px;
+  height: auto;
+  display: flex;
 }
 
 header {
@@ -72,6 +83,9 @@ header {
 .main_layout {
   max-width: 1100px;
   margin: 50px auto;
+  background-color: var(--background-black);
+  padding: 10px;
+  border-radius: 8px;
 }
 
 .main_page {
@@ -84,4 +98,10 @@ header {
   border-radius: 8px;
   padding: 20px;
   margin: 0 10px;
+}
+
+@media screen and (max-width: 768px) {
+  span, p {
+    font-size: 13px;
+  }
 }
