--- a/src/features/Header/Header.css
+++ b/src/features/Header/Header.css
@@ -25,6 +25,45 @@
   opacity: 1;
 }
 
+.shopping_cart_icon {
+  padding: 16px 10px;
+  cursor: pointer;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+
+.shopping_cart_icon > div {
+  background: var(--button-gradient-hover);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  width: auto;
+  height: 20px;
+  padding: 5px;
+  border-radius: 100px;
+}
+
+.shopping_cart_icon:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--button-gradient-hover);
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+  z-index: -1;
+}
+
+.shopping_cart_icon:hover::after {
+  opacity: 1;
+}
+
 .header_menu_button {
   padding: 3px 6px;
   margin-right: 8px;
@@ -42,7 +81,7 @@
 }
 
 .header_profile_button {
-  padding: 0 12px 0 0;
+  padding: 0 12px 0 12px;
   margin-left: 8px;
   height: 100%;
   display: flex;
@@ -51,8 +90,15 @@
   cursor: pointer;
 }
 
+.header_right {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
 .header_profile_button img {
-  border-radius: 0 25px 25px 0;
+  border-radius: 25px
 }
 
 .header_menu_button::after {
